# papers-ai-assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  architecture.drawio  docker-compose.yml  papers-ai.db  pyproject.toml
.github/workflows/: ci.yml
resources/db_tables/: tables.py
resources/prompts/: conversational.yaml  extractor.yaml
src/adapters/input/rest/: api.py  api_models.py
src/adapters/output/: chroma_vector_store.py  google_llm.py  groq_llm.py  mock_llm.py  mock_vector_store.py  sqlite.py
src/application/agents/common/: router.py
src/application/agents/comparator/: agent.py
src/application/agents/conversational/: agent.py
src/application/agents/extractor/: agent.py
src/application/agents/indexer/: agent.py
src/application/agents/memory/: agent.py
src/application/agents/orchestrator/: agent.py
src/application/agents/reader/: agent.py  extractor.py  factory.py
src/application/agents/reader/strategies/: base.py  pdf_reader.py  url_reader.py
src/application/graph/: conversation_graph.py  conversational_graph.py  processing_graph.py
src/core/: dependency_injector.py
src/domain/: conversation_state.py  lllm_moldes.py  models.py  ports.py  state.py
static/: index.html
tests/: constants.py
tests/unit/application/agents/comparator/: test_agent.py
tests/unit/application/agents/conversational/: test_agent.py
tests/unit/application/agents/extractor/: test_agent.py
tests/unit/application/agents/memory/: test_agent.py
tests/unit/application/agents/orchestrator/: test_agent.py
