[project]
name = "papers-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi[standard]>=0.136.1",
    "google-genai>=1.75.0",
    "groq>=0.37.1",
    "jsonpointer>=3.1.1",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.10",
    "pydantic>=2.13.3",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.0",
    "uvicorn>=0.46.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
